Nuopen 266 fix styling issues (#5553)
* Fix sidebar padding

* Fix per minute text overlap

* Fix report export links

* Fix reconcile orders form

* Fix pending journals button

* Fix price policy form alignment

--- a/app/assets/stylesheets/nucore.scss
+++ b/app/assets/stylesheets/nucore.scss
@@ -120,7 +120,7 @@ legend {
 }
 
 ul, ol {
-  &.nav,
+  &.nav:not(.sidebar-nav),
   &.navbar-nav,
   &.list-unstyled,
   &.list-inline,
@@ -456,16 +456,17 @@ p.per-minute {
   font-style: italic;
   @extend .text-muted;
   font-size: 85%;
-  margin-top: -0.75em;
+  margin-top: -0.25em;
 }
 
-p.per-minute-show {
-  @extend .per-minute;
-  margin-top: 0;
-}
+.price-policy-table {
+  input[type="text"] {
+    width: 80%;
+  }
 
-.price-policy-table input[type=text] {
-  width: 80%;
+  .negative-number {
+    display: block;
+  }
 }
 
 /* Account Fields */
