--- a/app/assets/stylesheets/app/reports.scss
+++ b/app/assets/stylesheets/app/reports.scss
@@ -16,7 +16,7 @@
   }
 
   .reportForm__downloads a {
-    display: block;
+    display: inline-block;
     padding-top: 2.3em;
   }
 
